--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -1,51 +1,97 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+Dma.Request0=USART2_RX
+Dma.RequestsNb=1
+Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.0.Instance=DMA1_Stream5
+Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.0.Mode=DMA_CIRCULAR
+Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
+FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFMeasure,8,512,StartTask02,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,24,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RBT6
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM4
+Mcu.IP13=TIM9
+Mcu.IP14=USART2
+Mcu.IP15=USART6
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=16
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_SYS_VS_tim10
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PA8
-Mcu.PinsNb=17
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PC12
+Mcu.Pin25=PB3
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=PB9
+Mcu.Pin3=PC0
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=VP_SYS_VS_tim11
+Mcu.Pin32=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -57,17 +103,32 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM1_UP_TIM10_IRQn
-NVIC.TimeBaseIP=TIM10
+NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
+NVIC.TimeBaseIP=TIM11
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=PWM2_A
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA11.Mode=Asynchronous
+PA11.Signal=USART6_TX
+PA12.Mode=Asynchronous
+PA12.Signal=USART6_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA15.GPIO_Label=TOF_DRDY
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=GPXTI15
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -80,12 +141,47 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=MOTOR_CUR_A
+PB0.Signal=ADCx_IN8
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=MOTOR_CUR_B
+PB1.Signal=ADCx_IN9
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=PWM2_B
+PB3.Signal=S_TIM2_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=PWM1_B
+PB6.Signal=S_TIM4_CH1
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=PWM1_A
+PB7.Signal=S_TIM4_CH2
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=TOF_SCL
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=TOF_SDA
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ADC_MEG
+PC0.Signal=ADCx_IN10
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=ENCODER2_B
+PC6.Signal=S_TIM3_CH1
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=ENCODER2_A
+PC7.Locked=true
+PC7.Signal=S_TIM3_CH2
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -122,52 +218,98 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
-RCC.48MHZClocksFreq_Value=75000000
-RCC.AHBFreq_Value=16000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_USART6_UART_Init-USART6-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true
+RCC.48MHZClocksFreq_Value=42000000
+RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
-RCC.CortexFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
-RCC.HCLKFreq_Value=16000000
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=84000000
+RCC.FCLKCortexFreq_Value=84000000
+RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=150000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLP,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=16000000
-RCC.PLLCLKFreq_Value=75000000
-RCC.PLLP=RCC_PLLP_DIV4
-RCC.PLLQCLKFreq_Value=75000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.MCO2PinFreq_Value=84000000
+RCC.PLLCLKFreq_Value=84000000
+RCC.PLLM=8
+RCC.PLLN=84
+RCC.PLLQCLKFreq_Value=42000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.VCOI2SOutputFreq_Value=300000000
-RCC.VCOInputFreq_Value=1562500
-RCC.VCOOutputFreq_Value=300000000
-RCC.VcooutputI2S=150000000
-SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
+RCC.SYSCLKFreq_VALUE=84000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=168000000
+RCC.VcooutputI2S=192000000
+SH.ADCx_IN10.0=ADC1_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
-SPI1.CalculateBaudRate=8.0 MBits/s
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
+SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM1.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM1.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-Output Compare1 CH1,Channel-Output Compare2 CH2
+SPI3.CalculateBaudRate=21.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IC2Filter=1
+TIM1.IPParameters=EncoderMode,IC2Filter
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler,AutoReloadPreload,Pulse-PWM Generation1 CH1,ClockDivision
+TIM4.Period=65535
+TIM4.Prescaler=0
+TIM4.Pulse-PWM\ Generation1\ CH1=0
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM9.IPParameters=Period,AutoReloadPreload,ClockDivision,Prescaler
+TIM9.Period=9550
+TIM9.Prescaler=8
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_SYS_VS_tim10.Mode=TIM10
-VP_SYS_VS_tim10.Signal=SYS_VS_tim10
+VP_SYS_VS_tim11.Mode=TIM11
+VP_SYS_VS_tim11.Signal=SYS_VS_tim11
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
