--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -9,17 +9,28 @@ CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
 Dma.Request0=USART2_RX
-Dma.RequestsNb=1
+Dma.Request1=USART2_TX
+Dma.RequestsNb=2
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
 Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_CIRCULAR
+Dma.USART2_RX.0.Mode=DMA_NORMAL
 Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.1.Instance=DMA1_Stream6
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
@@ -51,38 +62,46 @@ Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PA15
-Mcu.Pin22=PC10
-Mcu.Pin23=PC11
-Mcu.Pin24=PC12
-Mcu.Pin25=PB3
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PC10
 Mcu.Pin3=PC0
-Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin31=VP_SYS_VS_tim11
-Mcu.Pin32=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=33
+Mcu.Pin30=PC11
+Mcu.Pin31=PC12
+Mcu.Pin32=PD2
+Mcu.Pin33=PB3
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB8
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_SYS_VS_tim11
+Mcu.Pin4=PC1
+Mcu.Pin40=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin5=PC2
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
@@ -90,8 +109,8 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -105,7 +124,6 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -113,8 +131,10 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=PWM2_A
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=STOP
 PA1.Locked=true
-PA1.Signal=GPIO_Output
+PA1.Signal=GPIO_Input
 PA11.Mode=Asynchronous
 PA11.Signal=USART6_TX
 PA12.Mode=Asynchronous
@@ -123,30 +143,52 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA15.GPIO_Label=TOF_DRDY
-PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=ADC_DRDY
 PA15.Locked=true
 PA15.Signal=GPXTI15
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=ICM_SCLK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ICM_MISO
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=ICM_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=ENCODER1_B
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=ENCODER1_A
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=MOTOR_CUR_A
-PB0.Signal=ADCx_IN8
+PB0.GPIO_Label=LED1
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=MOTOR_CUR_B
-PB1.Signal=ADCx_IN9
+PB1.GPIO_Label=LED2
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=KEY3
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=KEY2
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=KEY1
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=PWM2_B
 PB3.Signal=S_TIM2_CH2
@@ -167,14 +209,35 @@ PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ADC_MEG
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=IOUT_1
+PC1.Locked=true
+PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=ADC_SCLK
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=ADC_MISO
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=ADC_MOSI
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=IOUT_2
+PC2.Locked=true
+PC2.Signal=ADCx_IN12
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=ICM_CS
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=TOF_DRDY
+PC5.Locked=true
+PC5.Signal=GPXTI5
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=ENCODER2_B
 PC6.Signal=S_TIM3_CH1
@@ -182,6 +245,10 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=ENCODER2_A
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=ADC_CS
+PD2.Locked=true
+PD2.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -250,12 +317,14 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
-SH.ADCx_IN8.0=ADC1_IN8,IN8
-SH.ADCx_IN8.ConfNb=1
-SH.ADCx_IN9.0=ADC1_IN9,IN9
-SH.ADCx_IN9.ConfNb=1
-SH.GPXTI15.0=GPIO_EXTI15
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
+SH.GPXTI15.0=ADC1_EXTI15,External-Trigger-for-Injected-conversion
 SH.GPXTI15.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
@@ -282,9 +351,6 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
-TIM1.EncoderMode=TIM_ENCODERMODE_TI12
-TIM1.IC2Filter=1
-TIM1.IPParameters=EncoderMode,IC2Filter
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1
