--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -1,16 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_11
+ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_12
+ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T5_CC4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv
+ADC1.InjNumberOfConversion=2
+ADC1.InjectedOffset-3\#ChannelInjectedConversion=0
+ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
+ADC1.InjectedRank-3\#ChannelInjectedConversion=1
+ADC1.InjectedRank-4\#ChannelInjectedConversion=2
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.3.Instance=DMA2_Stream0
+Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.3.Mode=DMA_CIRCULAR
+Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI1_TX
+Dma.Request3=ADC1
+Dma.RequestsNb=4
+Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.2.Instance=DMA2_Stream3
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.2.Mode=DMA_NORMAL
+Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -34,7 +67,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFMeasure,8,512,StartTask02,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,24,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,8,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,24,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,128,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;AngularSpeed,8,128,AngularSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -77,17 +110,17 @@ Mcu.Pin20=PC6
 Mcu.Pin21=PC7
 Mcu.Pin22=PA8
 Mcu.Pin23=PA9
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PA15
-Mcu.Pin29=PC10
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PC10
+Mcu.Pin29=PC11
 Mcu.Pin3=PC0
-Mcu.Pin30=PC11
-Mcu.Pin31=PC12
-Mcu.Pin32=PD2
-Mcu.Pin33=PB3
+Mcu.Pin30=PC12
+Mcu.Pin31=PD2
+Mcu.Pin32=PB3
+Mcu.Pin33=PB4
 Mcu.Pin34=PB6
 Mcu.Pin35=PB7
 Mcu.Pin36=PB8
@@ -110,6 +143,8 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -135,8 +170,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=STOP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA11.Mode=Asynchronous
-PA11.Signal=USART6_TX
 PA12.Mode=Asynchronous
 PA12.Signal=USART6_RX
 PA13.Mode=Serial_Wire
@@ -177,8 +210,6 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=LED2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=KEY3
 PB13.Locked=true
 PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -192,6 +223,9 @@ PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=PWM2_B
 PB3.Signal=S_TIM2_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=ENCODER2_B
+PB4.Signal=S_TIM3_CH1
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=PWM1_B
 PB6.Signal=S_TIM4_CH1
@@ -238,9 +272,8 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=TOF_DRDY
 PC5.Locked=true
 PC5.Signal=GPXTI5
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=ENCODER2_B
-PC6.Signal=S_TIM3_CH1
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=ENCODER2_A
 PC7.Locked=true
@@ -321,8 +354,9 @@ SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.ConfNb=1
-SH.GPXTI15.0=ADC1_EXTI15,External-Trigger-for-Injected-conversion
-SH.GPXTI15.ConfNb=1
+SH.GPXTI15.0=ADC1_EXTI15
+SH.GPXTI15.1=GPIO_EXTI15
+SH.GPXTI15.ConfNb=2
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
