--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -67,7 +67,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,8,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,24,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,128,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;AngularSpeed,8,128,AngularSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,8,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,24,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,128,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,8,128,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,8,128,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,8,128,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
