--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -67,7 +67,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,55,386,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,24,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,41,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,512,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,386,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,24,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,41,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,512,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -82,7 +82,6 @@ Mcu.IP12=TIM4
 Mcu.IP13=TIM5
 Mcu.IP14=TIM9
 Mcu.IP15=USART2
-Mcu.IP16=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -91,55 +90,52 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=17
+Mcu.IPNb=16
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
-Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PC6
-Mcu.Pin22=PC7
-Mcu.Pin23=PC8
-Mcu.Pin24=PC9
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
-Mcu.Pin3=PC0
-Mcu.Pin30=PA15
-Mcu.Pin31=PC10
-Mcu.Pin32=PC11
-Mcu.Pin33=PC12
-Mcu.Pin34=PD2
-Mcu.Pin35=PB3
-Mcu.Pin36=PB4
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PB8
-Mcu.Pin4=PC1
-Mcu.Pin40=PB9
-Mcu.Pin41=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin42=VP_SYS_VS_tim11
-Mcu.Pin43=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin5=PC2
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=45
+Mcu.Pin0=PH0 - OSC_IN
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PC0
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PC10
+Mcu.Pin3=PC1
+Mcu.Pin30=PC11
+Mcu.Pin31=PC12
+Mcu.Pin32=PD2
+Mcu.Pin33=PB3
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB8
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_SYS_VS_tim11
+Mcu.Pin4=PC2
+Mcu.Pin40=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
@@ -165,7 +161,6 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
@@ -178,8 +173,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=STOP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA12.Mode=Asynchronous
-PA12.Signal=USART6_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -194,8 +187,9 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=ICM_INT
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
@@ -210,11 +204,14 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=ICM_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=ENCODER1_B
+PA8.GPIO_PuPd=GPIO_NOPULL
 PA8.Signal=S_TIM1_CH1
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=GPIO_ModeDefaultPP,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=ENCODER1_A
+PA9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED1
@@ -224,6 +221,8 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=LED2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=KEY3
 PB13.Locked=true
 PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -237,9 +236,6 @@ PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=PWM2_B
 PB3.Signal=S_TIM2_CH2
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ENCODER2_B
-PB4.Signal=S_TIM3_CH1
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=PWM1_B
 PB6.Signal=S_TIM4_CH1
@@ -273,8 +269,6 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=ADC_MOSI
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
-PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=IOUT_2
 PC2.Locked=true
@@ -288,8 +282,10 @@ PC5.GPIO_Label=TOF_DRDY
 PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.Locked=true
 PC5.Signal=GPXTI5
-PC6.Mode=Asynchronous
-PC6.Signal=USART6_TX
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=ENCODER2_B
+PC6.Locked=true
+PC6.Signal=S_TIM3_CH1
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=ENCODER2_A
 PC7.Locked=true
@@ -350,7 +346,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_USART6_UART_Init-USART6-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true,15-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -386,9 +382,8 @@ SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.ConfNb=1
-SH.GPXTI15.0=ADC1_EXTI15
-SH.GPXTI15.1=GPIO_EXTI15
-SH.GPXTI15.ConfNb=2
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
@@ -424,10 +419,22 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IC1Filter=5
+TIM1.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IC2Filter=5
+TIM1.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Period
 TIM2.Period=6719
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=5
+TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
+TIM3.IC2Filter=5
+TIM3.IC2Polarity=TIM_ICPOLARITY_RISING
+TIM3.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -447,8 +454,6 @@ TIM9.Period=9550
 TIM9.Prescaler=8
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART6.IPParameters=VirtualMode
-USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim11.Mode=TIM11
