--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -206,12 +206,12 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=ENCODER1_B
-PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_ModeDefaultPP,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=ENCODER1_A
 PA9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
-PA9.GPIO_PuPd=GPIO_NOPULL
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED1
@@ -221,16 +221,19 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=LED2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=KEY3
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
 PB13.Signal=GPIO_Input
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB14.GPIO_Label=KEY2
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Signal=GPIO_Input
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=KEY1
+PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -282,12 +285,14 @@ PC5.GPIO_Label=TOF_DRDY
 PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.Locked=true
 PC5.Signal=GPXTI5
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=ENCODER2_B
+PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.Locked=true
 PC6.Signal=S_TIM3_CH1
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=ENCODER2_A
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
