更改串口 增加adc补偿代码

--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -33,7 +33,9 @@ Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
 Dma.Request2=SPI1_TX
 Dma.Request3=ADC1
-Dma.RequestsNb=4
+Dma.Request4=USART6_RX
+Dma.Request5=USART6_TX
+Dma.RequestsNb=6
 Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_TX.2.Instance=DMA2_Stream3
@@ -64,6 +66,26 @@ Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.4.Instance=DMA2_Stream1
+Dma.USART6_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.4.Mode=DMA_NORMAL
+Dma.USART6_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.5.Instance=DMA2_Stream6
+Dma.USART6_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.5.Mode=DMA_NORMAL
+Dma.USART6_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
@@ -82,6 +104,7 @@ Mcu.IP12=TIM4
 Mcu.IP13=TIM5
 Mcu.IP14=TIM9
 Mcu.IP15=USART2
+Mcu.IP16=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -90,7 +113,7 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0 - OSC_IN
@@ -112,30 +135,32 @@ Mcu.Pin22=PC8
 Mcu.Pin23=PC9
 Mcu.Pin24=PA8
 Mcu.Pin25=PA9
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PA15
-Mcu.Pin29=PC10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PC1
-Mcu.Pin30=PC11
-Mcu.Pin31=PC12
-Mcu.Pin32=PD2
-Mcu.Pin33=PB3
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin39=VP_SYS_VS_tim11
+Mcu.Pin30=PA15
+Mcu.Pin31=PC10
+Mcu.Pin32=PC11
+Mcu.Pin33=PC12
+Mcu.Pin34=PD2
+Mcu.Pin35=PB3
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=PB8
+Mcu.Pin39=PB9
 Mcu.Pin4=PC2
-Mcu.Pin40=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin41=VP_SYS_VS_tim11
+Mcu.Pin42=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=42
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
@@ -145,7 +170,9 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -165,6 +192,7 @@ NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=PWM2_A
@@ -173,6 +201,12 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=STOP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
+PA11.Locked=true
+PA11.Mode=Asynchronous
+PA11.Signal=USART6_TX
+PA12.Locked=true
+PA12.Mode=Asynchronous
+PA12.Signal=USART6_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -351,7 +385,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,15-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -459,6 +493,8 @@ TIM9.Period=9550
 TIM9.Prescaler=8
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim11.Mode=TIM11
