--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -13,7 +13,7 @@ ADC1.InjectedRank-4\#ChannelInjectedConversion=2
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_112CYCLES
 ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
@@ -90,7 +90,7 @@ Dma.USART6_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,386,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,24,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,41,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,512,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,21,386,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,15,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,48,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,40,512,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -349,8 +349,9 @@ PC9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC9.Locked=true
 PC9.PinState=GPIO_PIN_SET
 PC9.Signal=GPIO_Output
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=GPIO_Speed,GPIO_Label
 PD2.GPIO_Label=ADC_CS
+PD2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -455,9 +456,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI3.CLKPhase=SPI_PHASE_2EDGE
-SPI3.CalculateBaudRate=10.5 MBits/s
+SPI3.CalculateBaudRate=5.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
