--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -94,6 +94,8 @@ FREERTOS.Tasks01=defaultTask,21,386,StartDefaultTask,Default,NULL,Dynamic,NULL,N
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RBT6
 Mcu.Family=STM32F4
