普通道比较稳

--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -13,7 +13,7 @@ ADC1.InjectedRank-4\#ChannelInjectedConversion=2
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_112CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
@@ -221,8 +221,12 @@ PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA15.GPIO_PuPd=GPIO_PULLUP
 PA15.Locked=true
 PA15.Signal=GPXTI15
+PA2.GPIOParameters=GPIO_PuPd
+PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_PuPd
+PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
